5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1716_2508.log
== TEST (2019-05-16 08:13:28) 
-- CODE:
num=int(input("aproximcoes: "))
contadora=1
ap=3
print(ap)
while(count<num):
	den=(contadora*2)*(contadora*2+1)*(contadora)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora-contadora+1
	
	print(round(ap, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(count<num):
NameError: name 'count' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:14:24) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3
print(ap)
while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora-contadora+1
	
	print(round(ap, 8))
	
-- OUTPUT:
3
3.16666667
3.33333333
3.5
3.66666667
3.83333333
4.0
4.16666667
4.33333333
4.5
4.66666667
4.83333333
5.0
5.16666667
5.33333333
5.5
5.66666667
5.83333333
6.0
6.16666667
6.33333333
6.5
6.66666667
6.83333333
7.0
7.16666667
7.33333333
7.5
7.66666667
7.83333333
8.0
8.16666667
8.33333333
8.5
8.66666667
8.83333333
9.0
9.16666667
9.33333333
9.5
9.66666667
9.83333333
10.0
10.16666667
10.33333333
10.5
10.66666667
10.83333333
11.0
11.16666667
11.33333333
11.5
11.66666667
11.83333333
12.0
12.16666667
12.33333333
12.5
12.66666667
12.83333333
13.0
13.16666667
13.33333333
13.5
13.66666667
13.83333333
14.0
14.16666667
14.33333333
14.5
14.66666667
14.83333333
15.0
15.16666667
15.33333333
15.5
15.66666667
15.83333333
16.0
16.16666667
16.33333333
16.5
16.66666667
16.83333333
17.0
17.16666667
17.33333333
17.5
17.66666667
17.83333333
18.0
18.16666667
18.33333333
18.5
18.66666667
18.83333333
19.0
19.16666667
19.33333333
19.5
19.66666667
19.83333333
20.0
20.16666667
20.33333333
20.5
20.66666667
20.83333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:18:06) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3
print(ap)
while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- OUTPUT:
3
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:18:34) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3
print(ap)
while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- EXECUTION TIME:
0.446402
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
3.14162381
3.14156573
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:18:52) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- OUTPUT:
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:19:11) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4./den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- EXECUTION TIME:
0.379702
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
3.14162381
3.14156573
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:19:22) 
-- CODE:
num=int(input("aproximacoes: "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- OUTPUT:
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:20:06) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- OUTPUT:
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:20:15) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
	print(round(ap, 8))
	
-- EXECUTION TIME:
0.310476
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
3.14162381
3.14156573
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:22:12) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

	while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
print(round(ap, 8))
	
-- ERROR:
File "XXXX", line 5
    while(contadora<num):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:22:38) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
print(round(ap, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:23:00) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
print(round(ap, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:23:11) 
-- CODE:
num=int(input(" "))
contadora=1
ap=3

while(contadora<num):
	den=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	ap=ap+(-1)**(contadora+1)*4/den
	contadora=contadora+1
	
print(round(ap, 8))
	
-- EXECUTION TIME:
0.518792
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:25:57) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	contadora=contadora+1
	
print(round(ap, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(ap, 8))
NameError: name 'ap' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:26:32) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	apr=apr+(-1)**(contadora+1)*4/denominador
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	contadora=contadora+1
	
print(round(ap, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    apr=apr+(-1)**(contadora+1)*4/denominador
NameError: name 'denominador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:27:38) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(ap, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(ap, 8))
NameError: name 'ap' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:27:49) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(ap, 8))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(ap, 8))
NameError: name 'ap' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:28:13) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:28:54) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:30:30) 
-- CODE:
num=int(input(" "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:32:12) 
-- CODE:
num=int(input("digite um número: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:34:17) 
-- CODE:
num=int(input("digite um número: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 08:34:59) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 08:35:09) 
-- CODE:
num=int(input("digite um numero: "))
contadora=1
apr=3

while(contadora<num):
	denominador=(contadora*2)*(contadora*2+1)*(contadora*2+2)
	apr=apr+(-1)**(contadora+1)*4/denominador
	
	contadora=contadora+1
	
print(round(apr, 8))
	
-- EXECUTION TIME:
0.181791
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
